--- a/docker-compose.portainer.yml
+++ b/docker-compose.portainer.yml
@@ -3,8 +3,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "3000:80"
+    expose:
+      - "80"
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
       - REACT_APP_LOG_API_URL=${REACT_APP_LOG_API_URL}
+    networks:
+      - proxy
+
+networks:
+  proxy:
+    external: true  
