--- a/docker-compose.portainer.yml
+++ b/docker-compose.portainer.yml
@@ -7,7 +7,7 @@ services:
       - "80"
     environment:
       - NODE_ENV=production
-      - REACT_APP_LOG_API_URL=${REACT_APP_LOG_API_URL}
+      - VITE_APP_LOG_API_URL=${VITE_APP_LOG_API_URL}
     networks:
       - proxy
 
