--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
       - "3000:80"
     environment:
       - NODE_ENV=development
-      - REACT_APP_LOG_API_URL=${REACT_APP_LOG_API_URL}
+      - VITE_APP_LOG_API_URL=${VITE_APP_LOG_API_URL}
