--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,9 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    #location / {
-    #    try_files $uri $uri/ /index.html;
-    #}
+    # Основная конфигурация для React SPA
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
 }
