--- a/docker-compose.portainer.yml
+++ b/docker-compose.portainer.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        - VITE_APP_LOG_API_URL
     expose:
       - "80"
     container_name: greact-drill-monitor-${BRANCH}
